--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 					<div class="layui-form-mid layui-word-aux">单位：棋子个数</div>
 				</div>
 				<div class="layui-form-item" style="display: none;">
-					<label class="layui-form-label">4D长度</label>
+					<label class="layui-form-label">四维长度</label>
 					<div class="layui-input-inline">
 						<input type="number" name="lengthFour" min="3" max="30" init="10" value="10" class="layui-input" />
 					</div>
