--- a/one_2D.html
+++ b/one_2D.html
@@ -238,6 +238,11 @@
 		<script src="./layui/layui.js"></script>
 		<link rel="stylesheet" href="./layui/css/layui.css">
 		
+		<!-- PianoMusic Bgm -->
+		<script src="./js/acoustic_grand_piano-ogg.js"></script>
+		<script src="./js/music.js"></script>
+		<script src="./js/bgm.js"></script>
+		
 		<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
 		<script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
 		<script>
@@ -331,6 +336,11 @@ function go(url){
 	}, 600);
 	layer.load(0);
 }
+
+
+$("button, input[type='button'], svg, header > i").click(function(){
+	playEffect(); //播放音效
+});
 
 
 
@@ -889,7 +899,9 @@ function init(){
 		console.error(`${e.message}\n\tat ${e.filename}:${e.lineno}`)
 	};
 	
-	//禁用按钮
+	//关闭工具
+	scores(false);
+	analyse(false);
 	$("#toolBtn > .review").attr("disabled", "disabled");
 	$("#tools > .review").slideUp("fast");
 }
@@ -915,6 +927,8 @@ $("#board").click(function(e){
 	if (game.first === null) return; //未开始
 	if (game.winner !== false) return; //已结束
 	if (waiting) return; //上次未响应
+	
+	playEffect(); //播放音效
 	
 	const {offsetX: x, offsetY: y} = e;
 	const [i, j] = board.xy2ij(x,y, place);
