--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			
 			/* 背景 */
 			min-height: 100%;
-			background: #1b2036 url("./img/background.jpg") no-repeat fixed center;
+			background: #fffae8 url("./img/background.jpg") no-repeat fixed center;
 			background-size: cover;
 			max-width: 100%;
 			margin: auto;
