--- a/rooms.html
+++ b/rooms.html
@@ -55,7 +55,7 @@
 		}
 		html.outDown{
 			min-height: 100%;
-			background: #1b2036 url("./img/background.jpg") no-repeat fixed center;
+			background: #fffae8 url("./img/background.jpg") no-repeat fixed center;
 			background-size: cover;
 			max-width: 100%;
 			margin: auto;
